# pytorch-ssd

./: .gitignore  README.md  annotation_check_script.ipynb  augmentation.ipynb  check_annotation.ipynb  check_csv.ipynb  class-descriptions-boxable.csv  clean_all_images_and_make_csv.ipynb  convert_json2csv.py  convert_to_onnx.ipynb  delete_duplicate_csv.ipynb  download_openimg.ipynb  et --hard d496b88e7fcd43cacee59a85b13e770e1c87bf4e  eval_ssd.py  live_demo_forcpp.cpp  pip_install.ipynb  pseudo_anotation.ipynb  pseudo_dataset.ipynb  pseudo_dataset2.ipynb  run_ssd_demo.py  run_ssd_example.py  run_ssd_live_demo.py  test_ouput_pytorch.ipynb  train_script.ipynb  trainv10_large_exPseudocan.ipynb  trainv11_newdata_large.ipynb  trainv11_newdata_small.ipynb  trainv12_newdata_large.ipynb  trainv2.ipynb  trainv3.ipynb  trainv5.ipynb  trainv6_pseudo.ipynb  trainv7_pseudo.ipynb  trainv8_finetuning.ipynb  trainv9.ipynb  unzip.ipynb
all_images/: open2-sub-test-annotations-bbox.csv  open2-sub-train-annotations-bbox.csv  open2-sub-validation-annotations-bbox.csv  openimage-sub-test-annotations-bbox.csv  openimage-sub-train-annotations-bbox.csv  openimage-sub-validation-annotations-bbox.csv  sub-test-annotations-bbox.csv  sub-train-annotations-bbox.csv  sub-validation-annotations-bbox.csv
live_demo_cpp/: CMakeLists.txt  live_demo.cpp  live_demo.hpp  live_demo_forcpp.cpp  live_demo_forcpp2.cpp  main.cpp  main3.cpp  main_copy.cpp  sample_copy.cpp
live_demo_cpp/models/: mbv3-ssd-cornv1.xml
object_detecting/: CMakeLists.txt  main.cpp  main3.cpp  object_detecting.cpp  object_detecting.hpp
(+37 files in other folders)
